--- a/index.html
+++ b/index.html
@@ -5,16 +5,25 @@
     <title></title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+
+
 </head>
 <body>
 <div class="container">
     <div class="row">
-        <div class="col-sm-4 pull-left">Logo</div>
-        <div class="col-sm-4 pull-right">
-            <div class="pull-right main-menu-faq"><button><a href="">FAQ</a></button></div>
-            <div class="pull-right main-menu-login"><button><a href="">Log In</a></button></div>
-        </div>
+        <nav>
+            <div class="col-sm-4 pull-left">Logo</div>
+            <div class="col-sm-4 pull-right">
+                <div class="pull-right main-menu-login">
+                    <button class="btn" data-toggle="modal" data-target="#myModal"><a href="">Log In</a></button>
+                </div>
+                <div class="pull-right main-menu-faq">
+                    <button class="btn"><a href="">FAQ</a></button>
+                </div>
+            </div>
+        </nav>
     </div>
     <div class="row">
         <div class="tasty-pie"></div>
@@ -38,5 +47,44 @@
         </div>
     </div>
 </div>
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Login to SlicePie</h4>
+            </div>
+            <div class="modal-body">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-sm-6 form-container">
+                            <span>Recommend </span><a href="">Learn More</a><br> <!-- Убрать потом брейк -->
+                            <div class="button btn">Login 1</div>
+                            <div class="button btn">Login 2</div>
+                        </div>
+                        <div class="col-sm-6 form-container">
+                            <div class="row" id="phase-status" name="sign-up">
+                                <span class="form-question" >Don't have an account? </span><span id="phase-switcher">Sign Up</span>
+
+                                <form>
+                                    <input id="form-email" class="form-control" type="email" placeholder="e-mail"/>
+                                    <div class="msg-box" id="form-email-msg-box"></div>
+                                    <input id="form-password" class="form-control" type="password" placeholder="password"/>
+                                    <div class="msg-box" id="form-password-msg-box"></div>
+                                    <a href="">Forgot password?</a>
+                                    <button id="login-button" class="btn-primary btn-lg btn pull-right">Login</button>
+                                </form>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<script src="js/form.js"></script>
 </body>
 </html>
