--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="col-sm-4 pull-left">Logo</div>
             <div class="col-sm-4 pull-right">
                 <div class="pull-right main-menu-login">
-                    <button class="btn" data-toggle="modal" data-target="#myModal"><a href="">Log In</a></button>
+                    <button class="btn" data-toggle="modal" data-target="#myModal">Log In</button>
                 </div>
                 <div class="pull-right main-menu-faq">
                     <button class="btn"><a href="">FAQ</a></button>
