--- a/camp-list.html
+++ b/camp-list.html
@@ -9,31 +9,38 @@
     <script src="js/bootstrap.min.js"></script>
 </head>
 <body>
-<nav>
+<nav class="navbar navbar-default campaign-page-nav">
     <div class="container-fluid">
-
-        <ul class="nav nav-pills">
-            <li role="presentation" class="pull-left logo">Logo</li>
-            <li role="presentation" class="pull-left"><a href="">Campaigns</a></li>
-            <li role="presentation" class="pull-left"><a href="">Agents</a></li>
-
-            <li role="presentation" class="pull-right"><a href="">Help</a></li>
-            <li role="presentation" class="dropdown pull-right">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-                   aria-expanded="false">
-                    Name <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                    <li><a href="">Profile</a></li>
-                    <li><a href="">Account</a></li>
-                    <li><a href="">Support</a></li>
-                    <li><a href="">Switch to Agent</a></li>
-                    <li><a href="">Log Out</a></li>
-                </ul>
-            </li>
-            <li role="presentation" class="pull-right">foto</li>
-        </ul>
+        <div class="row">
+            <ul class="nav nav-pills">
+                <li role="presentation" class="pull-left logo">Logo</li>
+                <li role="presentation" class="pull-left"><button class="btn"><a href="">Campaigns</a></button></li>
+                <li role="presentation" class="pull-left"><button class="btn"><a href="">Agents</a></button></li>
+                <li role="presentation" class="pull-right"><button class="btn"><a href="">Help</a></button></li>
+                <li role="presentation" class="dropdown pull-right">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+                       aria-expanded="false">
+                        <button class="btn">
+                             <span class="dd-span">Name    </span><span class="caret"></span>
+                        </button>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="">Profile</a></li>
+                        <li><a href="">Account</a></li>
+                        <li><a href="">Support</a></li>
+                        <li><a href="">Switch to Agent</a></li>
+                        <li><a href="">Log Out</a></li>
+                    </ul>
+                </li>
+                <li role="presentation" class="pull-right">foto</li>
+            </ul>
+        </div>
     </div>
 </nav>
+<div class="container">
+    <div class="row">
+
+    </div>
+</div>
 </body>
 </html>
