--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-<nav class="main-page-nav">
+<nav class="main-page-nav navbar navbar-default">
     <div class="container">
         <div class="row">
             <div class="col-sm-4 pull-left">Logo</div>
