--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <nav class="main-page-nav navbar navbar-default">
     <div class="container">
         <div class="row">
-            <div class="col-sm-4 pull-left">Logo</div>
+            <div class="col-sm-4 pull-left"><img class="logo" src="images/pie-chart-3-64x64.png" alt="pie's business"/></div>
             <div class="col-sm-4 pull-right">
                 <div class="pull-right main-menu-login">
                     <button class="btn" data-toggle="modal" data-target="#myModal"><span>Log In</span></button>
