--- a/camp-list.html
+++ b/camp-list.html
@@ -48,12 +48,8 @@
     <h2 class="text-left campaign-page-title">Campaigns</h2>
 
     <div class="row">
-        <div class="col-sm-2 campaign-create-button">
-            <a class="thumbnail-link" href="">Create Campaign</a>
-            <i class="glyphicon glyphicon-plus"></i>
-            <div>Create Campaign</div>
-        </div>
-        <div class="col-sm-4 col-sm-offset-1 campaign-thumbnail">
+
+        <div class="col-sm-3 col-sm-offset-1 campaign-thumbnail">
             <a class="thumbnail-link" href="">Click to edit</a>
 
             <div class="title">
@@ -72,7 +68,7 @@
             </div>
 
         </div>
-        <div class="col-sm-4 col-sm-offset-1 campaign-thumbnail">
+        <div class="col-sm-3 col-sm-offset-1 campaign-thumbnail">
             <a class="thumbnail-link" href="">Click to edit</a>
 
             <div class="title">
@@ -90,8 +86,10 @@
                 <img src="images/food-picture-2.png" alt=""/>
             </div>
         </div>
-        <div class="col-sm-4 campaign-thumbnail campaign-thumbnail-empty">
-
+        <div class="col-sm-3 col-sm-offset-1 campaign-create-button">
+            <a class="thumbnail-link" href="">Create Campaign</a>
+            <i class="glyphicon glyphicon-plus"></i>
+            <div>Create Campaign</div>
         </div>
     </div>
 </div>
