active campaigns page complete

--- a/active-campaigns.html
+++ b/active-campaigns.html
@@ -46,6 +46,17 @@
         <li role="presentation" class="active pull-left">
             <a href="#active-campaigns" aria-controls="campaign-info" role="tab" data-toggle="tab">Active Campaigns</a>
         </li>
+        <li role="presentation" class="col-sm-6 pull-right">
+            <div class="">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search for new campaigns">
+                     <span class="input-group-btn">
+                       <button class="btn btn-default" type="button">Go!</button>
+                     </span>
+                </div>
+                <!-- /input-group -->
+            </div>
+        </li>
     </ul>
     <div class="tab-content">
         <!-- ************ CE-FORM ***********-->
@@ -53,6 +64,48 @@
             <div class="active-campaigns-list">
                 <div class="col-sm-3 col-sm-offset-1 campaign-thumbnail">
                     <a class="thumbnail-link" href="">Click to edit</a>
+
+                    <div class="place">Restaurant</div>
+                    <div class="place-name">Marco's on Cavill</div>
+                    <div class="title">
+                        <div class="logo"></div>
+                        Dinner for 6+ people
+                    </div>
+                    <div class="special">
+                        <span class="glyphicon glyphicon-heart"></span>Complimentary bottle of wine
+                    </div>
+                    <div class="reward">
+                        <span class="glyphicon glyphicon-usd"></span>10% of the final bill
+                    </div>
+                    <div class="images">
+                        <img src="images/food-picture-1.png" alt=""/>
+                        <img src="images/food-picture-2.png" alt=""/>
+                    </div>
+
+                </div>
+                <div class="col-sm-3 col-sm-offset-1 campaign-thumbnail">
+                    <a class="thumbnail-link" href="">Click to edit</a>
+
+                    <div class="place">Restaurant</div>
+                    <div class="place-name">Marco's on Cavill</div>
+                    <div class="title">
+                        <div class="logo"></div>
+                        Happy Birthday Party
+                    </div>
+                    <div class="special">
+                        <span class="glyphicon glyphicon-heart"></span>10% Discount
+                    </div>
+                    <div class="reward">
+                        <span class="glyphicon glyphicon-usd"></span>10% of the final bill
+                    </div>
+                    <div class="images">
+                        <img src="images/food-picture-1.png" alt=""/>
+                        <img src="images/food-picture-2.png" alt=""/>
+                    </div>
+                </div>
+                <div class="col-sm-3 col-sm-offset-1 campaign-thumbnail">
+                    <a class="thumbnail-link" href="">Click to edit</a>
+
                     <div class="place">Restaurant</div>
                     <div class="place-name">Marco's on Cavill</div>
                     <div class="title">
